--- a/01-node-selectors.yaml
+++ b/01-node-selectors.yaml
@@ -5,10 +5,9 @@ metadata:
   labels:
     purpose: "selector-demo"
 spec:
-  nodeselector:
-     
+  nodeSelector:
+    topology.kubernetes.io/zone: us-east-1c 
   containers:
   - name: nginx
     image: nginx
-    ports:
-    - containerPort: 80
+    
