--- a/02-toleration.yaml
+++ b/02-toleration.yaml
@@ -10,14 +10,10 @@ spec:
   containers:
   - name: nginx
     image: nginx
-    ports:
-    - containerPort: 80
+    
   tolerations:
-  - key: "key1"
+  - key: "hardware"
     operator: "Equal"
-    value: "value1"
+    value: "gpu"
     effect: "NoSchedule"
-  - key: "key1"
-    operator: "Equal"
-    value: "value1"
-    effect: "NoExecute"
+  
