--- a/03-toleration.yaml
+++ b/03-toleration.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: toleration
+  name: toleration1
   labels:
     purpose: "toleration-demo"
 spec:
   nodeSelector:
     topology.kubernetes.io/zone: us-east-1a
-     
   containers:
   - name: nginx
     image: nginx
