--- a/07-pod-affinity.yaml
+++ b/07-pod-affinity.yaml
@@ -9,24 +9,24 @@ spec:
   - name: with-node-affinity
     image: registry.k8s.io/pause:3.8
 
----
-apiVersion: v1
-kind: Pod-2
-metadata:
-  name: pod-affinity
-  labels:
-    app-name: pod-2
-spec:
-  affinity:
-    podAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-          - key: app-name
-            operator: In
-            values:
-            - pod-1
-        topologyKey: topology.kubernetes.io/zone
-  containers:
-  - name: with-node-affinity
-    image: registry.k8s.io/pause:3.8    
+#---
+# apiVersion: v1
+# kind: Pod-2
+# metadata:
+#   name: pod-affinity
+#   labels:
+#     app-name: pod-2
+# spec:
+#   affinity:
+#     podAffinity:
+#       requiredDuringSchedulingIgnoredDuringExecution:
+#       - labelSelector:
+#           matchExpressions:
+#           - key: app-name
+#             operator: In
+#             values:
+#             - pod-1
+#         topologyKey: topology.kubernetes.io/zone
+#   containers:
+#   - name: with-node-affinity
+#     image: registry.k8s.io/pause:3.8    
