--- a/08-pod-anti-affinity.yaml
+++ b/08-pod-anti-affinity.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: Pod-1
+kind: Pod
 metadata:
   name: pod-affinity
   labels:
@@ -11,7 +11,7 @@ spec:
 
 ---
 apiVersion: v1
-kind: Pod-2
+kind: Pod
 metadata:
   name: pod-affinity
   labels:
